--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,24 @@
 {
   "version": "0.2.0",
   "configurations": [
-    
     {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
       "args": [],
-      "stopAtEntry": true,
-      "externalConsole": false,
-      "cwd": "/Users/juice/FUN/CTesting",
-      "program": "/Users/juice/FUN/CTesting/build/Debug/outDebug",
+      "stopAtEntry": false,
+      "externalConsole": true,
+      "cwd": "c:/Users/jjnat/FUN/CTesting",
+      "program": "c:/Users/jjnat/FUN/CTesting/build/Debug/outDebug",
       "MIMode": "gdb",
-      "miDebuggerPath": "gdb"
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
     }
   ]
 }
